--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-
+*.iml
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -37,5 +37,5 @@ build/
 target/**
 **/target/**
 API/target/**
-BATCH/**
 WEB/target/**
+BATCH/target/**
