--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=admin
